# museon-cli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
contracts/: command-catalog.json
docs/: agent-discoverability.md  cli-surface-conventions.md  domain-command-framework.md  install.md  npm-distribution.md  releasing.md
museoncli/: __init__.py  artifact_validation.py  auth.py  config.py  credentials.py  envelopes.py  execution.py  large_json.py  main.py  setup_agent.py
museoncli/bundled_skills/: __init__.py
museoncli/domains/: __init__.py  _model.py  _shared.py  account_operation.py  (+12 more)
scripts/: build_native.py  distribution.py  gen_command_contract.py  gen_command_docs.py  generate_npm_packages.py  generate_third_party_notices.py  pack_npm_packages.py  package_native.py  publish_npm_packages.py  smoke_install.py  smoke_native.py  sync_release_assets.py  verify_native_signatures.py  verify_npm_packages.py  verify_public_artifacts.py  verify_release_prerequisites.py  verify_windows_signatures.ps1
tests/: test_account_operation_commands.py  test_account_publish_commands.py  test_artifact_validation.py  test_auth.py  test_campaign_monitor_content_remove.py  test_campaign_monitor_write_commands.py  test_config.py  test_docs_sync.py  test_large_json.py  test_main.py  test_npm_distribution.py  test_public_package_boundary.py  test_setup_agent.py  test_social_account_config_commands.py  test_surface_conventions.py  test_verify_public_artifacts.py
(+16 files in other folders)
